Fixed the visibility issue of footer

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 :root{
   /* font-size: 11px; */
-  font-size: clamp(4.5px,0.9vw,11px);
+  font-size: clamp(4.5px,0.9vw,10px);
   --frame-red: #d80100;
   --header-yellow: #d6d600;
   --frame-width: 7rem;
@@ -89,11 +89,35 @@ body{
   opacity: 0.5;
 }
 
-/* footer{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
+#color-picker{
+  grid-area: 3/1/4/2;
+  outline-offset: 50px;
+}
+
+/* footer */
+footer{
+  color: var(--plate-border-inset);
+  margin-bottom: 5rem;
+  text-align: center;
+  font-family: 'Oswald', sans-serif;
+  background-color: white;
+  box-shadow: 0 0 4rem 3rem white;
+  font-size: 2.5rem;
+  line-height: 1.6;
+}
+
+footer a{
+  display: inline-block;
+  text-decoration: none;
+  color: var(--frame-border-outset);
+  transition: all 0.3s;
+}
+
+footer a:hover{
+  color: #ff19c9;
+  margin: auto 3rem;
+  transform: scale(1.3);
+}
 
 /* media queries */
 @media screen and (orientation: portrait) {
